# infoCoRe_old

./: DESCRIPTION  NAMESPACE  README.md
R/: RcppExports.R
_safe/: configure.ac
example/: example.R
src/: Headers.h  Makevars  Makevars.in  RcppExports.cpp  infoCoRe.cpp
